# notSofiaLib

./: .gitignore  .gitmodules  CMakeLists.txt  build_gdb_client_qtc.sh  codestyle.sh  codestyle.txt  helpers.txt
scripts/: dump_umap.sh  dump_umap_target.sh  helpers.txt  make_valgrind.sh
src/: Application.cpp  Application.h  main.c  main.cpp
src/ADC/nvp6134/: Chip.cpp  Chip.h  ChipChild.h  ChipSpecs.h  DriverCommunicator.cpp  DriverCommunicator.h  Motion.cpp  Motion.h  MotionLoop.cpp  MotionLoop.h  ViChannel.cpp  ViChannel.h  VoChannel.cpp  VoChannel.h
src/Boards/: ABoard.cpp  ABoard.h
src/Boards/7004_lm_v3/: Board.cpp  Board.h  lm7004v3.cpp  lm7004v3.h
src/Boards/7004_lm_v3/HiMPP/: ViInfoProvider.cpp  ViInfoProvider.h
src/Boards/7004_lm_v3/nvp6134/: Chip.cpp  Chip.h
src/Boards/nvp6134/: Board.cpp  Board.h  ViInfoProvider.cpp  ViInfoProvider.h
src/Boards/nvp6134/HiMPP/: ElementsFactory.h  ViInfoProvider.cpp  ViInfoProvider.h
src/Boards/nvp6134/MPP/: ElementsFactory.h
src/HiMPP/: ElementsFactory.cpp  ElementsFactory.h  MPP.cpp  MPP.h  MPPChild.h  Utils.cpp  Utils.h  VideoBuffer.cpp  VideoBuffer.h
src/HiMPP/ASubsystem/: AGroupOfItems.h  ASubsystem.h  ASubsystemItem.h  ASubsystemLeaf.h  Attributes.h  AttributesHolder.h  IAttributesBuilder.h
src/HiMPP/ASubsystem/InfoSources/: FrameFormatSource.h  IFrameFormatSource.h  IVideoCaptureFormatSource.h  IVideoFormatSource.h
src/HiMPP/ASubsystem/ReadLoop/: DataBuffer.cpp  DataBuffer.h  DataBufferWrapper.h  IReaderOut.h  LoopManager.cpp  LoopManager.h  LoopReader.cpp  LoopReader.h  ReadLoop.cpp  ReadLoop.h  ReaderDummyOut.h  ReaderFileOut.cpp  ReaderFileOut.h  ReaderMemFileOut.h  ReaderMemOut.cpp  ReaderMemOut.h
src/HiMPP/Configurations/7004_lm_v3/: MPP.cpp  MPP.h
src/HiMPP/Configurations/hi3520dv200/: ElementsFactory.cpp  ElementsFactory.h  MPP.cpp  MPP.h
src/HiMPP/Misc/: MPPChild.h  Utils.cpp
src/HiMPP/Sys/: Sys.cpp  Sys.h
src/HiMPP/VB/: VBBase.cpp  VBBase.h  VBPool.cpp  VBPool.h  VBufferizable.h  VencVBPool.cpp  VencVBPool.h  VideoBuffer.cpp  VideoBuffer.h
src/HiMPP/VDA/: Subsystem.cpp  Subsystem.h
src/HiMPP/VDA/Channel/: Attributes.cpp  Attributes.h  Channel.cpp  Channel.h  VdaDataReader.cpp  VdaDataReader.h
src/HiMPP/VENC/: Channel.cpp  Channel.h  Group.cpp  Group.h  IGroupSource.h  Subsystem.cpp  Subsystem.h
src/HiMPP/VENC/Channel/: Attributes.h  Channel.cpp  Channel.h  H264Attributes.cpp  H264Attributes.h  H264AttributesBuilder.cpp  H264AttributesBuilder.h  IAttributesBuilder.h  IChannelSource.h  IStreamOut.h  StreamBuffer.cpp  StreamBuffer.h  StreamDummyOut.h  StreamFileOut.cpp  StreamFileOut.h  StreamLoop.cpp  StreamLoop.h  StreamReader.cpp  (+1 more)
src/HiMPP/VI/: Channel.cpp  Channel.h  ChannelAttributes.cpp  ChannelAttributes.h  Device.cpp  Device.h  Subsystem.cpp  Subsystem.h
src/HiMPP/VPSS/: Channel.cpp  Channel.h  ChannelAttributes.cpp  ChannelAttributes.h  Group.cpp  Group.h  GroupAttributes.cpp  GroupAttributes.h  IGroupSource.h  Subsystem.cpp  Subsystem.h
src/Hisilicon/MPP/: ElementsFactory.cpp  ElementsFactory.h  MPP.cpp  MPP.h  MPPChild.h  Utils.cpp  Utils.h  VideoBuffer.cpp  VideoBuffer.h
src/Misc/: AApplication.cpp  AApplication.h  CMap.hpp  Child.h  ClassName.h  GenericFactory.h  Holder.h  IdHolder.h  LambdaTraits.h  MagicEnum.hpp  PropertyContainer.h  SelectReadLoop.cpp  SelectReadLoop.h  Size.h  Utils.h
src/Misc/Configurator/: Configurable.cpp  Configurable.h  ConfigurableFactory.h  Configurator.cpp  Configurator.h  Startable.cpp  Startable.h
src/Misc/EventLoop/: EpollLoop.cpp  EpollLoop.h  Epollable.cpp  Epollable.h  EpoolOperationType.h  EventLoop.cpp  EventLoop.h  EventQueue.cpp  EventQueue.h  PipeInterrupter.cpp  PipeInterrupter.h  Timer.cpp  Timer.h
src/Utils/: AConfigurator.cpp  AConfigurator.h  Child.h  GenericFactory.h  Holder.h  IConfigurable.h  IdHolder.cpp  IdHolder.h  LambdaTraits.h  Size.h  Utils.h  VideoFormat.h
src/Utils/Configurable/: Configurable.cpp  Configurable.h  Configurator.cpp  Configurator.h
src/Utils/Configurator/: Configurable.cpp  Configurable.h  ConfigurableFactory.h  Configurator.cpp  Configurator.h
src/common/: sample_comm.h  sample_comm_sys.c  sample_comm_sys.cpp  sample_comm_venc.c  sample_comm_venc.cpp  sample_comm_vi.c  sample_comm_vi.cpp  sample_comm_vpss.c  sample_comm_vpss.cpp
src/common/nvp6134/: ad_cfg.c  ad_cfg.cpp  ad_cfg.h
src/nvp6134/: Chip.h  ChipChild.cpp  DriverCommunicator.cpp  ViChannel.h  VoChannel.cpp
toolchain/: toolchains.txt
toolchain/cronsstool-ng/: .config
(+92 files in other folders)
